kubernetes/apps/production/media/prowlarr/prowlarr-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
      - name: prowlarr-volume
        persistentVolumeClaim:
          claimName: prowlarr-volume-pvc
      containers:
      - name: prowlarr
        image: ghcr.io/k8s-at-home/prowlarr
        ports:
        - containerPort: 9696
        volumeMounts:
        - name: prowlarr-volume
          mountPath: /config
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  ports:
  - port: 9696
    protocol: TCP
    targetPort: 9696
  selector:
    app: prowlarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: prowlarr-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: media.${DOMAIN_NAME}
    http:
      paths:
      - path: /prowlarr
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 9696
  tls:
  - hosts:
    - media.${DOMAIN_NAME}
